--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
 <link rel="icon" href="/assets/images/icon.ico">
 <meta name="theme-color" content="#7952b3">
       <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
@@ -63,11 +58,13 @@
     </div>
   </header>
 
-  <!-- <div class="nav-scroller py-1 mb-2">
+  <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="#">World</a>
-      <a class="p-2 link-secondary" href="#">U.S.</a>
-      <a class="p-2 link-secondary" href="#">Technology</a>
+      <a class="p-2 link-secondary" href="https://krishnaglodha.medium.com" target="_blank">Blogs</a>
+      <a class="p-2 link-secondary" href="https://www.youtube.com/channel/UC7IQzdf_jn3gkt_9K0TDQmg" target="_blank">Videos</a>
+        <!-- <a class="p-2 link-secondary" href="#">Repositories</a>
+      <a class="p-2 link-secondary" href="#">Twitter</a> -->
+      <!-- <a class="p-2 link-secondary" href="#">Technology</a>
       <a class="p-2 link-secondary" href="#">Design</a>
       <a class="p-2 link-secondary" href="#">Culture</a>
       <a class="p-2 link-secondary" href="#">Business</a>
@@ -76,9 +73,9 @@
       <a class="p-2 link-secondary" href="#">Science</a>
       <a class="p-2 link-secondary" href="#">Health</a>
       <a class="p-2 link-secondary" href="#">Style</a>
-      <a class="p-2 link-secondary" href="#">Travel</a>
+      <a class="p-2 link-secondary" href="#">Travel</a> -->
     </nav>
-  </div> -->
+  </div>
 </div>
 
 <main class="container">
