--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col p-4 d-flex flex-column position-static">
           <!-- <p class="d-inline-block mb-2 text-primary">Development</p> <p class="d-inline-block mb-2 text-info">Open source</p> -->
           <h3 class="mb-1">Web GIS developement</h3>
-                    <div class="mb-1 text-muted">⏱️ 60+ Hours   <a href="ogd.html" target="blank" class="stretched-link text-right">👉🏻 More About course 👈🏻 </a></div>
+                    <div class="mb-1 text-muted">⏱️ 60+ Hours   <a href="ogd" target="blank" class="stretched-link text-right">👉🏻 More About course 👈🏻 </a></div>
           <p class="card-text mb-auto">This is a course on Open source web GIS developement covering </p>
           <ul>
               <li>Basic web developement stack</li>
@@ -116,7 +116,7 @@
         <div class="col p-4 d-flex flex-column position-static">
           <!-- <strong class="d-inline-block mb-2 text-success">Geospatial Database</strong> -->
           <h3 class="mb-1">Geospatial Database and RDBMS</h3>           
-          <div class="mb-1 text-muted">⏱️ 20+ Hours   <a href="database.html" target="blank" class="stretched-link text-right">👉🏻 More About course 👈🏻 </a>
+          <div class="mb-1 text-muted">⏱️ 20+ Hours   <a href="database" target="blank" class="stretched-link text-right">👉🏻 More About course 👈🏻 </a>
 </div>
           <p class="mb-auto">This course covers concepts of database and it's geospatial components. This course covers</p>
           <ul>
