--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div class="p-4 mb-3 bg-light rounded">
         <h4 class="font-italic">About</h4>
         <p class="mb-0">SpatialOps is a <em>mind baby</em> of <a href="http://krishnaglodha.com" target="_blank" > Krishna Lodha </a>. He is a full stack web gis developer with love to spread knowledge.  </p>
-        <p>Most of his day time is spend on coding 🖥️ and listing to classical music 🎼. Remaining is for <a href="https://krishnaglodha.medium.com" target="_blank">blogging</a> , and <a href="https://www.youtube.com/channel/UC7IQzdf_jn3gkt_9K0TDQmg" target="_blank">Youtubing</a> !! </p> 
+        <p>He spends most of his daytime on coding 🖥️ and listening classical music 🎼 . Remaining is for <a href="https://krishnaglodha.medium.com" target="_blank">blogging</a> , and <a href="https://www.youtube.com/channel/UC7IQzdf_jn3gkt_9K0TDQmg" target="_blank">Youtubing</a> !! </p> 
       </div>
 
 
