--- a/database.html
+++ b/database.html
@@ -825,7 +825,7 @@
 	        
 	        <div id="section-more" class="section section-related py-5">
 		        <div class="container">
-			        			        <h3 class="section-title mb-5">🎉👉🏻<a href="/index.html"> Checkout More Courses You May Like </a> 👈🏻🎊</h3>
+			        			        <h3 class="section-title mb-5">🎉👉🏻<a href="/"> Checkout More Courses You May Like </a> 👈🏻🎊</h3>
 
 		        </div><!--//container-->
 	        </div><!--//section-8-->
