--- a/index.html
+++ b/index.html
@@ -106,8 +106,25 @@
           </ul>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-            <!-- <img src="assets/images/course_banner.png"  width="300" height="250" alt="" srcset=""> -->
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <!-- <strong class="d-inline-block mb-2 text-success">Geospatial Database</strong> -->
+          <h3 class="mb-1">Geospatial Analysis using Python</h3>           
+          <div class="mb-1 text-muted">⏱️ 20+ Hours   <a href="geopython" target="blank" class="stretched-link text-right">👉🏻 Coming Soon 👈🏻 </a>
+</div>
+          <p class="mb-auto">This course covers concepts of GIS, Python and it's geospatial analysis components. This course covers</p>
+          <ul>
+              <li>Introduction to GIS and Python</li>
+              <li>Intoduction to Geospatial python packages</li>
+              <li>Vector Analysis using Python</li>
+              <li>Raster Analysis using Python</li>
+          </ul>
+        </div>
+        <div class="col-auto d-none d-lg-block">
         </div>
       </div>
     </div>
@@ -127,9 +144,6 @@
           </ul>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-            <!-- <img src="assets/images/course_banner.png"  width="250" height="250" alt="" srcset=""> -->
-
         </div>
       </div>
     </div>
@@ -137,25 +151,21 @@
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <!-- <strong class="d-inline-block mb-2 text-success">Geospatial Database</strong> -->
-          <h3 class="mb-0">Advance Geoserver</h3>
+          <h3 class="mb-0">Geoserver Installation to Production</h3>
                     <div class="mb-1 text-muted">⏱️ 30+ Hours   
-                        <!-- <a href="https://google.com" target="blank" class="stretched-link text-right">👉🏻 More About course 👈🏻 </a> -->
-                        <p class="d-inline-block mb-2 text-danger">Coming Soon!</p>
-                    
+                        <a href="#" target="blank" class="stretched-link text-right">👉🏻 Inform me! 👈🏻 </a>
                     </div>
-          <p class="mb-auto">This course covers advance concepts in geoserver  including
+          <p class="mb-auto">This course covers  concepts in geoserver  including
               </p>
               <ul>
+                  <li>Using WMS/WFS/GWC services</li>
                   <li>Advance styling using JSON, CSS</li>
                   <li>Security Module</li>
                   <li>REST APIs in geoserver</li>
                   <li>Optimization for deployment</li>
-
               </ul>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-            <!-- <img src="assets/images/course_banner.png"  width="250" height="250" alt="" srcset=""> -->
 
         </div>
       </div>
