--- a/ogd.html
+++ b/ogd.html
@@ -164,7 +164,7 @@
 									   
 										<div class="module-sub-item p-3">
 										    <div class="row justify-content-between">
-											    <div class="col-9"><span class="theme-text-secondary mr-2">1.1</span>Introduction to Web Development1O</div>
+											    <div class="col-9"><span class="theme-text-secondary mr-2">1.1</span>Introduction to Web Development</div>
 											    <!-- <div class="col-3 text-right extra-info">15:20</div> -->
 										    </div>
 									    </div>
