added banner to geopython

--- a/geopython.html
+++ b/geopython.html
@@ -732,7 +732,7 @@
 							             
 						            </div><!--//plan-content-->
 						            <div class="plan-cta text-center px-4">
-							             <a class="btn btn-primary btn-block" href="mailto:me@krishnaglodha.com?subject=Application for OGD Weekday Course&body=We are interested in corporate training , Please share more details over this email" target="_blank">Enrol Now</a>
+							             <a class="btn btn-primary btn-block" href="mailto:me@krishnaglodha.com?subject=Application for Geopython Weekday Course&body=We are interested in corporate training , Please share more details over this email" target="_blank">Enrol Now</a>
 							        </div>
 					            </div><!--//plan-item-->
 				            </div><!--//col-->
@@ -766,7 +766,7 @@
 							             
 						            </div><!--//plan-content-->
 						            <div class="plan-cta text-center px-4">
-							             <a class="btn btn-primary btn-block" href="mailto:me@krishnaglodha.com?subject=Application for OGD Weekend Course&body=We are interested in corporate training , Please share more details over this email" target="_blank">Enrol Now</a>
+							             <a class="btn btn-primary btn-block" href="mailto:me@krishnaglodha.com?subject=Application for Geopython Weekend Course&body=We are interested in corporate training , Please share more details over this email" target="_blank">Enrol Now</a>
 							        </div>
 					            </div><!--//plan-item-->
 				            </div><!--//col-->
@@ -784,7 +784,7 @@
 				        <div class="row">
 					        <div class="col-12 col-lg-3">
 						        <h3 class="section-title text-left mb-4">FAQ ❓</h3>
-						        <div class="intro mb-5 pr-lg-3">Can't find the answer you're looking for? Feel free to <a class="theme-link" href="mailto:me@krishnaglodha.com?subject=Clarification for OGD Course&body=I have some doubts as follows : " target="_blank">get in touch</a>.</div>
+						        <div class="intro mb-5 pr-lg-3">Can't find the answer you're looking for? Feel free to <a class="theme-link" href="mailto:me@krishnaglodha.com?subject=Clarification for Geopython Course&body=I have some doubts as follows : " target="_blank">get in touch</a>.</div>
 					        </div>
 					        <div class="col-12 col-lg-9">
 						        <div class="faq-items pl-lg-3">
